Updated version of dublin domino screen

--- a/res/layout/activity_dublin_domino.xml
+++ b/res/layout/activity_dublin_domino.xml
@@ -3,39 +3,50 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:weightSum="15.0"
+    android:weightSum="18.0"
     tools:context="${relativePackage}.${activityClass}" >
 
+    
+     
+   
+
     <Button
+         android:layout_marginBottom="10dp"
+        android:layout_marginTop="100dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
     
     <Button 
+    android:layout_marginBottom="10dp"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
       android:layout_weight="1"
    />
      <Button
+          android:layout_marginBottom="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
     
     <Button 
+         android:layout_marginBottom="10dp"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
       android:layout_weight="1"
    />
     
          <Button
+              android:layout_marginBottom="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
     
     <Button 
+         android:layout_marginBottom="10dp"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
       android:layout_weight="1"
