--- a/res/layout/activity_etc.xml
+++ b/res/layout/activity_etc.xml
@@ -3,9 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="7.0"
+    android:weightSum="18.0"
     tools:context="${relativePackage}.${activityClass}" >
 
+    <TextView
+        android:text="@string/eth_view"
+        android:id="@+id/main_View"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/padding_small"
+        android:layout_marginRight="@dimen/padding_small"
+        android:layout_marginBottom="@dimen/padding_small"
+        android:layout_weight="0.5"
+        android:textSize="@dimen/text_medium" />
+    
+    
    <Button
         android:id="@+id/button_1"
         android:layout_width="match_parent"
@@ -14,7 +26,7 @@
         android:layout_marginRight="@dimen/padding_small"
         android:layout_marginTop="@dimen/padding_medium"
         android:layout_weight="1.0"
-        android:text="@string/button_one"
+        android:text="@string/button_six"
         android:textColor="@color/black"
         android:textSize="@dimen/text_large" />
 
@@ -26,7 +38,7 @@
         android:layout_marginRight="@dimen/padding_small"
         android:layout_marginTop="@dimen/padding_medium"
         android:layout_weight="1.0"
-        android:text="@string/button_two"
+        android:text="@string/button_seven"
         android:textColor="@color/black"
         android:textSize="@dimen/text_large" />
 
