--- a/res/layout/activity_etc.xml
+++ b/res/layout/activity_etc.xml
@@ -3,29 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="18.0"
+    android:weightSum="4.0"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <TextView
-        android:id="@+id/main_View"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/padding_small"
-        android:layout_marginRight="@dimen/padding_small"
-        android:layout_marginBottom="@dimen/padding_small"
-        android:layout_weight="0.5"
-        android:textSize="@dimen/text_medium" />
     
     
    <Button
         android:id="@+id/button_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/padding_small"
-        android:layout_marginRight="@dimen/padding_small"
-        android:layout_marginTop="@dimen/padding_medium"
+        android:layout_marginTop="@dimen/padding_large"
+        android:layout_marginBottom="@dimen/padding_large"
         android:layout_weight="1.0"
-        android:text="@string/button_six"
+        android:text="@string/ballinteer_monday"
         android:textColor="@color/black"
         android:textSize="@dimen/text_large" />
 
@@ -33,11 +23,10 @@
         android:id="@+id/button_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/padding_small"
-        android:layout_marginRight="@dimen/padding_small"
-        android:layout_marginTop="@dimen/padding_medium"
+         android:layout_marginTop="@dimen/padding_large"
+        android:layout_marginBottom="@dimen/padding_large"
         android:layout_weight="1.0"
-        android:text="@string/button_seven"
+        android:text="@string/dunLaoghaire_tuesday"
         android:textColor="@color/black"
         android:textSize="@dimen/text_large" />
 
