--- a/res/layout/activity_satellite.xml
+++ b/res/layout/activity_satellite.xml
@@ -22,12 +22,12 @@
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
-	    android:text="@string/kilmacanogue">
+	    android:text="@string/newtownmountkennedy_wednesday">
 	</Button>
 	<Button
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
-	    android:text="@string/home_visits">
+	    android:text="@string/bray_thursday">
 	</Button>
 </LinearLayout>
