--- a/res/layout/activity_domino_wicklow.xml
+++ b/res/layout/activity_domino_wicklow.xml
@@ -11,7 +11,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
-	    android:text="@string/greystones">
+	    android:text="@string/greystones_monday">
 	</Button>
 	<Button
 	    android:layout_height="wrap_content"
