--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -14,49 +14,39 @@
         android:text="@string/button_NMH_OPD"
         android:layout_weight="1.0"
         android:textSize="@dimen/text_small" />
-
     <Button
         android:id="@+id/Leopardstown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Leopardstown"
         android:layout_weight="1.0"
-        android:textColor="@color/black"
         android:textSize="@dimen/text_small" />
-
      <Button
          android:id="@+id/Dunlaoghaire"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/Dunlaoghaire"
          android:layout_weight="1.0"
-         android:textColor="@color/black"
          android:textSize="@dimen/text_small" />
-
      <Button
          android:id="@+id/Churchtown"
          android:layout_width="match_parent"
-         android:text="@string/Churchtown"
+         android:layout_height="wrap_content"
          android:layout_weight="1.0"
-         android:textColor="@color/black"
+         android:text="@string/Churchtown"
          android:textSize="@dimen/text_small" />
-
      <Button
          android:id="@+id/NMH"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/NMH"
          android:layout_weight="1.0"
-         android:textColor="@color/black"
          android:textSize="@dimen/text_small" />
-
      <Button
          android:id="@+id/Homevisits"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/Homevisits"
          android:layout_weight="1.0"
-         android:textColor="@color/black"
          android:textSize="@dimen/text_small" />
-
 </LinearLayout>
