--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -21,7 +21,7 @@
         android:textSize="@dimen/text_small" />
 
     <Button
-        android:id="@+id/NMH_OPD"
+        android:id="@+id/dominoDublin_nmh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/padding_small"
@@ -35,7 +35,7 @@
         android:textSize="@dimen/text_small" />
 
     <Button
-        android:id="@+id/Leopardstown"
+        android:id="@+id/dominoDublin_leopardstown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/padding_small"
@@ -49,7 +49,7 @@
         android:textSize="@dimen/text_small" />
 
      <Button
-         android:id="@+id/Dunlaoghaire"
+         android:id="@+id/dominoDublin_Dunlaoghaire"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_small"
@@ -63,7 +63,7 @@
          android:textSize="@dimen/text_small" />
 
      <Button
-         android:id="@+id/Churchtown"
+         android:id="@+id/dominoDublin_Churchtown"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_small"
@@ -77,7 +77,7 @@
          android:textSize="@dimen/text_small" />
 
      <Button
-         android:id="@+id/NMH"
+         android:id="@+id/dominoDublin_nmh2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_small"
@@ -91,7 +91,7 @@
          android:textSize="@dimen/text_small" />
 
      <Button
-         android:id="@+id/Homevisits"
+         android:id="@+id/dominoDublin_Homevisits"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_small"
