--- a/res/layout/activity_satellite.xml
+++ b/res/layout/activity_satellite.xml
@@ -7,24 +7,28 @@
     android:weightSum="4.0">
     
 	<Button
+	    android:id="@+id/satellite_greystones"
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
 	    android:text="@string/greystones_monday">
 	</Button>
 	<Button
+	    android:id="@+id/satellite_arklow"
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
 	    android:text="@string/arklow_tuesday">
 	</Button>
 	<Button
+	    android:id="@+id/satellite_newtownmountkenned"
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
 	    android:text="@string/newtownmountkennedy_wednesday">
 	</Button>
 	<Button
+	    android:id="@+id/satellite_bray"
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
 	    android:layout_weight="1.0"
