--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -8,42 +8,42 @@
     tools:context="com.example.myapp.MainActivity" >
 
     <Button
-        android:id="@+id/dominoDublin_nmh"
+        android:id="@+id/domino_dublin_nmh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_NMH_OPD"
         android:layout_weight="1.0"
         android:textSize="@dimen/text_small" />
     <Button
-        android:id="@+id/dominoDublin_leopardstown"
+        android:id="@+id/domino_dublin_leopardstown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/leopardstown"
         android:layout_weight="1.0"
         android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/dominoDublin_Dunlaoghaire"
+         android:id="@+id/domino_dublin_Dunlaoghaire"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dunlaoghaire"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/dominoDublin_Churchtown"
+         android:id="@+id/domino_dublin_Churchtown"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:text="@string/churchtown"
          android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/dominoDublin_nmh2"
+         android:id="@+id/domino_dublin_nmh2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/nmh"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/dominoDublin_Homevisits"
+         android:id="@+id/domino_dublin_Homevisits"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_visits"
