--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:orientation="vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
-</RelativeLayout>
+    <EditText 
+    android:id="@+id/username"
+    android:layout_height="wrap_content"
+    android:gravity="center" 
+    android:inputType ="username" 
+    android:layout_width="fill_parent"
+    android:hint="Username" 
+    android:layout_marginTop="260dp"
+    android:layout_marginBottom="10dp"
+    android:maxLines="1">
+    </EditText>
+    
+    <EditText 
+    android:id="@+id/password"
+    android:layout_height="wrap_content"
+    android:gravity="center" 
+    android:inputType ="password" 
+    android:layout_width="fill_parent"
+    android:hint="Password" 
+    android:maxLines="1">
+    </EditText>
+    
+    <Button
+   android:id="@+id/login"
+   android:layout_width="fill_parent"
+   android:layout_height="wrap_content"
+   android:text="Login" 
+/>
+    
+</LinearLayout>
