--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,6 +5,16 @@
     android:orientation="vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
+    
+   
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content""
+        android:background="@drawable/logo1" 
+        />
+    
+    
     <EditText 
     android:id="@+id/username"
     android:layout_height="wrap_content"
@@ -29,9 +39,10 @@
     
     <Button
    android:id="@+id/login"
+     
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
-   android:text="Login" 
+   
 />
     
 </LinearLayout>
