--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -11,7 +11,7 @@
         android:id="@+id/domino_dublin_nmh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_NMH_OPD"
+        android:text="@string/button_nmh_opd"
         android:layout_weight="1.0"
         android:textSize="@dimen/text_small" />
     <Button
@@ -22,14 +22,14 @@
         android:layout_weight="1.0"
         android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/domino_dublin_Dunlaoghaire"
+         android:id="@+id/domino_dublin_dunlaoghaire"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dunlaoghaire"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/domino_dublin_Churchtown"
+         android:id="@+id/domino_dublin_churchtown"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/churchtown"
@@ -43,7 +43,7 @@
          android:layout_weight="1.0"
          android:textSize="@dimen/text_small" />
      <Button
-         android:id="@+id/domino_dublin_Homevisits"
+         android:id="@+id/domino_dublin_homevisits"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_visits"
