--- a/res/layout/activity_clinic.xml
+++ b/res/layout/activity_clinic.xml
@@ -8,42 +8,42 @@
     android:weightSum="5.0">
     
     <Button
-        android:id="@+id/DominoD"
+        android:id="@+id/domino_d"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/DominoD"
+        android:text="@string/domino_d"
         android:layout_weight="1.0"
         android:textSize="@dimen/text_large" >
     </Button>
     <Button
-        android:id="@+id/DominoW"
+        android:id="@+id/domino_w"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/DominoW"
+        android:text="@string/domino_w"
         android:layout_weight="1.0"
         android:textSize="@dimen/text_large" >
     </Button>
      <Button
-         android:id="@+id/ETHD"
+         android:id="@+id/ethd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:text="@string/ETHD"
+         android:text="@string/ethd"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_large" >
      </Button>
      <Button
-         android:id="@+id/ETHW"
+         android:id="@+id/ethw"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:text="@string/ETHW"
+         android:text="@string/ethw"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_large" >
      </Button>
      <Button
-         android:id="@+id/Satellite"
+         android:id="@+id/satellite"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:text="@string/Satellite"
+         android:text="@string/satellite"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_large" >
      </Button>
