Added old strings.xml

--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -8,45 +8,45 @@
     tools:context="com.example.myapp.MainActivity" >
 
     <Button
-        android:id="@+id/domino_NMH_OPD"
+        android:id="@+id/domino_dublin_nmh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/domino_NMH_OPD"
+        android:text="@string/button_nmh_opd"
         android:layout_weight="1.0"
-        android:textSize="@dimen/text_Xsmall" />
+        android:textSize="@dimen/text_small" />
     <Button
         android:id="@+id/domino_dublin_leopardstown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/leopardstown"
         android:layout_weight="1.0"
-        android:textSize="@dimen/text_Xsmall" />
+        android:textSize="@dimen/text_small" />
      <Button
          android:id="@+id/domino_dublin_dunlaoghaire"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dunlaoghaire"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      <Button
          android:id="@+id/domino_dublin_churchtown"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/churchtown"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      <Button
          android:id="@+id/domino_dublin_nmh2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/nmh"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      <Button
          android:id="@+id/domino_dublin_homevisits"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_visits"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
 </LinearLayout>
