--- a/res/layout/activity_clinic.xml
+++ b/res/layout/activity_clinic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,26 +25,26 @@
         android:textSize="@dimen/text_large" >
     </Button>
      <Button
-         android:id="@+id/ETHD"
+         android:id="@+id/ethd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:text="@string/ETHD"
+         android:text="@string/ethd"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_large" >
      </Button>
      <Button
-         android:id="@+id/ETHW"
+         android:id="@+id/ethw"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:text="@string/ETHW"
+         android:text="@string/ethw"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_large" >
      </Button>
      <Button
-         android:id="@+id/Satellite"
+         android:id="@+id/satellite"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:text="@string/Satellite"
+         android:text="@string/satellite"
          android:layout_weight="1.0"
          android:textSize="@dimen/text_large" >
      </Button>
