--- a/res/layout/appointment_type.xml
+++ b/res/layout/appointment_type.xml
@@ -14,7 +14,7 @@
          android:layout_height="wrap_content"
          android:text="@string/clinics"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_large" />
+         android:textSize="@dimen/text_Xlarge" />
      
      <Button
          android:id="@+id/visits"
@@ -22,5 +22,5 @@
          android:layout_height="wrap_content"
          android:text="@string/visits"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_large" />
+         android:textSize="@dimen/text_Xlarge" />
 </LinearLayout>
