--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="text_small">20dp</dimen>
     <dimen name="text_medium">23dp</dimen>
     <dimen name="text_large">27dp</dimen>
+    <dimen name="text_Xlarge">35sp</dimen>
 </resources>
