--- a/res/layout/appointment_type.xml
+++ b/res/layout/appointment_type.xml
@@ -1,26 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="2.0"
-    tools:context="com.example.myapp.MainActivity" >
-
-   
-     <Button
-         android:id="@+id/clinics"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/clinics"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xlarge" />
-     
-     <Button
-         android:id="@+id/visits"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/visits"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xlarge" />
+    tools:context="${relativePackage}.${activityClass}" >   
+    
+   <Button
+        android:id="@+id/clinics"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_large"
+        android:layout_marginBottom="@dimen/padding_large"
+        android:layout_weight="1.0"
+        android:text="@string/clinics"
+        android:textSize="@dimen/text_large" />
+    <Button
+       android:id="@+id/visits"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_large"
+        android:layout_marginBottom="@dimen/padding_large"
+        android:layout_weight="1.0"
+        android:text="@string/visits"
+        android:textSize="@dimen/text_large" />
 </LinearLayout>
