--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/domino_NMH_OPD"
         android:layout_weight="1.0"
-        android:textSize="@dimen/text_Xsmall" />
+        android:textSize="@dimen/text_small" />
     
     <Button
         android:id="@+id/domino_dublin_leopardstown"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:text="@string/leopardstown"
         android:layout_weight="1.0"
-        android:textSize="@dimen/text_Xsmall" />
+        android:textSize="@dimen/text_small" />
     
      <Button
          android:id="@+id/domino_dublin_dunlaoghaire"
@@ -29,7 +29,7 @@
          android:layout_height="wrap_content"
          android:text="@string/dunlaoghaire"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      
      <Button
          android:id="@+id/domino_dublin_churchtown"
@@ -37,7 +37,7 @@
          android:layout_height="wrap_content"
          android:text="@string/churchtown"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      
      <Button
          android:id="@+id/domino_dublin_nmh2"
@@ -45,7 +45,7 @@
          android:layout_height="wrap_content"
          android:text="@string/nmh"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      
      <Button
          android:id="@+id/domino_dublin_homevisits"
@@ -53,6 +53,6 @@
          android:layout_height="wrap_content"
          android:text="@string/home_visits"
          android:layout_weight="1.0"
-         android:textSize="@dimen/text_Xsmall" />
+         android:textSize="@dimen/text_small" />
      
 </LinearLayout>
