--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:background="@color/white">
 
   <ImageView
+      android:contentDescription="@string/main_logo"
       android:id="@+id/imageView2"
       android:layout_gravity="center|top"
       android:layout_marginTop="10dp"
@@ -22,7 +23,7 @@
     	android:gravity="center" 
     	android:inputType ="text" 
     	android:layout_width="fill_parent"
-    	android:hint="Username" 
+    	android:hint="@string/username" 
     	android:layout_marginTop="110dp"
     	android:layout_marginBottom="10dp"
     	android:maxLines="1">
@@ -34,7 +35,7 @@
 	    android:gravity="center" 
 	    android:inputType ="textPassword" 
 	    android:layout_width="fill_parent"
-	    android:hint="Password" 
+	    android:hint="@string/password" 
 	    android:maxLines="1">
     </EditText>
         
@@ -43,6 +44,5 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/login" 
-	/>
-    
+	/>    
 </LinearLayout>
