--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
 		android:id="@+id/login"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
+		android:backgroundTint="@color/blue"
 		android:text="@string/login" 
 	/>    
 </LinearLayout>
