--- a/res/layout/activity_domino_dublin.xml
+++ b/res/layout/activity_domino_dublin.xml
@@ -11,9 +11,10 @@
         android:id="@+id/domino_dublin_nmh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/domino_NMH_OPD"
+        android:text="@array/domino_NMH_OPD"
         android:layout_weight="1.0"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_small" 
+        android:gravity="start"/>
     
     <Button
         android:id="@+id/domino_dublin_leopardstown"
