--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
   <ImageView
       android:contentDescription="@string/main_logo"
-      android:id="@+id/imageView2"
+      android:id="@+id/imageView"
       android:layout_gravity="center|top"
       android:layout_marginTop="10dp"
       android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
 	/>
   
 	<EditText
-	    android:id="@+id/username2"
+	    android:id="@+id/username"
     	android:layout_height="wrap_content"
     	android:gravity="center" 
     	android:inputType ="text" 
