This is the comfirm Appointment screen without the database info

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -4,7 +4,7 @@
     <color name="red">#EA0909</color>
     <color name="black">#000000</color>
     <color name="green">#2BE10E</color>
-    <color name="blue">#198CFF</color>
+    <color name="blue">#AEC1F2</color>
     <color name="purple">#C80CDF</color>
     <color name="brown">#CC5E03</color>
     <color name="grey">#CCCCCC</color>
