--- a/res/layout/activity_clinic_dates_homevisits.xml
+++ b/res/layout/activity_clinic_dates_homevisits.xml
@@ -5,7 +5,10 @@
     tools:context="${relativePackage}.${activityClass}" >
 
     <android.widget.CalendarView
+        android:id="@+id/calendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+    
+
 </RelativeLayout>
