Layout changes made to the Login screen

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -7,5 +7,5 @@
     <color name="blue">#9FC5F8</color>
     <color name="purple">#C80CDF</color>
     <color name="brown">#CC5E03</color>
-    <color name="grey">#CCCCCC</color>
+    <color name="grey">#676766</color>
 </resources>
