--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/smart"
-      android:textSize="18sp"
+      android:textSize="23sp"
+      android:textColor="@color/grey"
       android:layout_marginTop="15dp"
 	/> 
 	
@@ -52,49 +53,54 @@
       android:textSize="20sp"
       android:textColor="@color/blue"/>
 
-
 	<EditText
 	    android:id="@+id/username"
-    	android:layout_height="wrap_content"
-    	android:layout_width="fill_parent"
-    	android:gravity="center" 
-    	android:inputType ="text" 
-    	android:hint="@string/username" 
-    	android:background="@drawable/drawable"
-    	android:layout_marginTop="20dp"
-    	android:layout_marginBottom="20dp"
-    	android:maxLines="1">
+	    android:layout_width="320dp"
+	    android:layout_gravity="center"
+	    android:layout_height="wrap_content"
+	    android:layout_marginBottom="20dp"
+	    android:layout_marginTop="20dp"
+	    android:background="@drawable/drawable"
+	    android:gravity="start"
+	    android:hint="@string/username"
+	    android:inputType="text"
+	    android:maxLines="1" >
+
     </EditText>
     
-    <EditText 
-	    android:id="@+id/password"
-	    android:layout_height="wrap_content"
-	    android:layout_width="fill_parent"
-	    android:gravity="center" 
-	    android:inputType ="textPassword" 
-	    android:hint="@string/password" 
-	    android:background="@drawable/drawable"
-	    android:layout_marginBottom="20dp"
-	    android:maxLines="1">
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="320dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/drawable"
+        android:gravity="start"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:maxLines="1" >
+
     </EditText>  
           
 	<Button
 		android:id="@+id/login"
-		android:layout_width="fill_parent"
+		android:layout_width="320dp"
+		android:layout_gravity="center"
 		android:layout_height="wrap_content"
 		android:background="@color/blue"
-		android:text="@string/login" 
+		android:text="@string/login"
 	/>  
 	
    <TextView
       android:layout_gravity="center|top"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="10dp"
+      android:layout_marginTop="20dp"
       android:textColor="@color/black"
       android:text="@string/maternity_hospital"/>
    
      <TextView
+      android:id="@+id/about"
       android:layout_gravity="center|top"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
